# design-patterns

./: .gitignore  README.md
lab-1/: CMakeLists.txt  README.md  task-1.c  task-1.h  test.c  test.out
lab-1/task-1/: discussion.txt  polymorphism.c  task-1.txt
lab-1/task-2/: a.out  linear.c  linear.h  main.c  square.c  square.h  unary_function.c  unary_function.h  virtual_tables.c
lab-1/task-3/: discussion.txt  polymorphism_memory_cost.cpp
lab-1/task-4/: discussion.txt  polmorphism_time_cost.cpp  polmorphism_time_cost.s  polymorphism_time_cost_demangled.s
lab-1/task-5/: manual_call_of_virtual_function.cpp
lab-1/task-6/: discussion.txt  object_construction.cpp  object_construction.s  object_construction_denamngled.s
lab-2/: CMakeLists.txt  lab2_task.txt
lab-2/task-0/: discussion.txt  object_oriented.cpp  procedural.cpp
lab-2/task-1/: upgradability.c
lab-2/task-2/: discussion.txt  upgradability.cpp
lab-2/task-3/: upgradability.py
lab-2/task-4/: pom.xml
lab-2/task-4/src/main/java/: Client.java
lab-2/task-5/: pom.xml
lab-2/task-5/src/main/java/: Client.java
lab-2/task-6/: pom.xml
lab-2/task-6/src/main/java/: Cell.java  CellObserver.java  Client.java  Sheet.java
lab-3/: lab3_task.txt
lab-3/task-1.1/: main.c  main.h  myfactory.c  myfactory.h  parrot.c  tiger.c
lab-3/task-1.4/: pom.xml
lab-3/task-2/: pom.xml
lab-4/: lab4_task.txt  pom.xml
lab-4/src/main/java/: Main.java
lab-4/src/main/java/gui/: Renderer.java  State.java
lab-4/src/main/java/model/: GraphicalObject.java  Renderer.java
lab-4/src/main/java/util/: GeometryUtil.java  (+2 more)
(+54 files in other folders)
